// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader Component should render properly 1`] = `
<body>
  <div>
    <div
      class="loader-container "
    >
      <div
        class="loader"
      />
    </div>
  </div>
</body>
`;

exports[`Loader Component should render properly with message 1`] = `
<body>
  <div>
    <div
      class="loader-container "
    >
      <div
        class="loader"
      />
      <span
        class="message"
      >
        custom message
      </span>
    </div>
  </div>
</body>
`;
